tests/compile_fail/into-extra-eq.stderr
error: unexpected argument
  --> $DIR/into-extra-eq.rs:15:12
   |
15 |     #[into = "a"]
   |            ^
